--- a/hudi-client/hudi-flink-client/pom.xml
+++ b/hudi-client/hudi-flink-client/pom.xml
@@ -62,12 +62,19 @@
       <version>${flink.version}</version>
       <scope>provided</scope>
     </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.apache.flink</groupId>-->
+<!--      <artifactId>${flink.table.runtime.artifactId}</artifactId>-->
+<!--      <version>${flink.version}</version>-->
+<!--      <scope>provided</scope>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>org.apache.flink</groupId>
-      <artifactId>${flink.table.runtime.artifactId}</artifactId>
+      <artifactId>flink-table-runtime-blink_${scala.binary.version}</artifactId>
       <version>${flink.version}</version>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>org.apache.flink</groupId>
       <artifactId>flink-parquet_${scala.binary.version}</artifactId>
@@ -168,13 +175,23 @@
       <version>${flink.version}</version>
       <scope>test</scope>
     </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.apache.flink</groupId>-->
+<!--      <artifactId>${flink.runtime.artifactId}</artifactId>-->
+<!--      <version>${flink.version}</version>-->
+<!--      <scope>test</scope>-->
+<!--      <classifier>tests</classifier>-->
+<!--    </dependency>-->
+
     <dependency>
       <groupId>org.apache.flink</groupId>
-      <artifactId>${flink.runtime.artifactId}</artifactId>
+      <artifactId>flink-table-runtime-blink_${scala.binary.version}</artifactId>
       <version>${flink.version}</version>
-      <scope>test</scope>
+      <scope>provided</scope>
       <classifier>tests</classifier>
     </dependency>
+
+
     <dependency>
       <groupId>org.apache.flink</groupId>
       <artifactId>flink-streaming-java_${scala.binary.version}</artifactId>
