--- a/pom.xml
+++ b/pom.xml
@@ -122,12 +122,17 @@
     <spark3.version>3.2.1</spark3.version>
     <sparkbundle.version></sparkbundle.version>
     <flink1.14.version>1.14.4</flink1.14.version>
-    <flink1.13.version>1.13.6</flink1.13.version>
-    <flink.version>${flink1.14.version}</flink.version>
-    <hudi.flink.module>hudi-flink1.14.x</hudi.flink.module>
-    <flink.bundle.version>1.14</flink.bundle.version>
-    <flink.runtime.artifactId>flink-runtime</flink.runtime.artifactId>
-    <flink.table.runtime.artifactId>flink-table-runtime_${scala.binary.version}</flink.table.runtime.artifactId>
+    <flink1.13.version>1.13.5</flink1.13.version>
+<!--    <flink.version>${flink1.14.version}</flink.version>-->
+    <flink.version>1.13.5</flink.version>
+<!--    <hudi.flink.module>hudi-flink1.14.x</hudi.flink.module>-->
+    <hudi.flink.module>hudi-flink1.13.x</hudi.flink.module>
+<!--    <flink.bundle.version>1.14</flink.bundle.version>-->
+    <flink.bundle.version>1.13</flink.bundle.version>
+<!--    <flink.runtime.artifactId>flink-runtime</flink.runtime.artifactId>-->
+    <flink.runtime.artifactId>flink-runtime_2.12</flink.runtime.artifactId>
+<!--    <flink.table.runtime.artifactId>flink-table-runtime_${scala.binary.version}</flink.table.runtime.artifactId>-->
+    <flink.table.runtime.artifactId>flink-table-runtime-blink_${scala.binary.version}</flink.table.runtime.artifactId>
     <flink.table.planner.artifactId>flink-table-planner_${scala.binary.version}</flink.table.planner.artifactId>
     <flink.format.parquet.version>1.12.2</flink.format.parquet.version>
     <spark31.version>3.1.3</spark31.version>
@@ -139,7 +144,8 @@
     <scala11.version>2.11.12</scala11.version>
     <scala12.version>2.12.10</scala12.version>
     <scala.version>${scala11.version}</scala.version>
-    <scala.binary.version>2.11</scala.binary.version>
+<!--    <scala.binary.version>2.11</scala.binary.version>-->
+    <scala.binary.version>2.12</scala.binary.version>
     <apache-rat-plugin.version>0.13</apache-rat-plugin.version>
     <scala-maven-plugin.version>3.3.1</scala-maven-plugin.version>
     <scalatest.version>3.0.1</scalatest.version>
