--- a/pom.xml
+++ b/pom.xml
@@ -124,11 +124,12 @@
     <spark3.version>3.2.1</spark3.version>
     <sparkbundle.version></sparkbundle.version>
     <flink1.15.version>1.15.1</flink1.15.version>
-    <flink1.14.version>1.14.5</flink1.14.version>
+    <flink1.14.version>1.14.4</flink1.14.version>
     <flink1.13.version>1.13.6</flink1.13.version>
-    <flink.version>${flink1.13.version}</flink.version>
-    <hudi.flink.module>hudi-flink1.13.x</hudi.flink.module>
-    <flink.bundle.version>1.13</flink.bundle.version>
+<!--    <flink.version>${flink1.13.version}</flink.version>-->
+    <flink.version>1.14.4</flink.version>
+    <hudi.flink.module>hudi-flink1.14.x</hudi.flink.module>
+    <flink.bundle.version>1.14</flink.bundle.version>
     <flink.format.parquet.version>1.12.2</flink.format.parquet.version>
     <flink.runtime.artifactId>flink-runtime</flink.runtime.artifactId>
     <flink.table.runtime.artifactId>flink-table-runtime_${scala.binary.version}</flink.table.runtime.artifactId>
